--- a/FlybitsTest/Info.plist
+++ b/FlybitsTest/Info.plist
@@ -2,10 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>LocationPluginDebug</key>
-	<true/>
-	<key>ContextPluginDebug</key>
-	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -22,13 +18,19 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>ContextPluginDebug</key>
+	<true/>
 	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>LocationPluginDebug</key>
 	<true/>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>Please let us use your location.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Please let us use your location.</string>
 	<key>NSLocationUsageDescription</key>
+	<string>Please let us use your location.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Please let us use your location.</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
@@ -51,7 +53,9 @@
 	</dict>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>fetch</string>
 		<string>location</string>
+		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
